--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
                 <a href="recepti.html" class="single-menu-elemnt-link">Рецепти</a> 
 
             </div>
-            <div class="login-title"><a">Вход</a></div>
+            <div class="blog-title"><a">Вход</a></div>
         </header>   
         
         <div class="sidebar"></div>   
