--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
                 <a href="recepti.html" class="single-menu-elemnt-link">Рецепти</a> 
 
             </div>
-            <div class="register-title"><a">Регистрация</a></div>
+            <div class="blog-title"><a">Регистрация</a></div>
         </header>   
         
         <div class="sidebar"></div>   
